[package]
name = "tiny-web-macro"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "tiny-web-macro is a macro library for automatically connecting a web engine to the web project."
keywords = ["tiny-web"]
repository = "https://github.com/tryteex/tiny-web-macro"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"